bugfix: import forms button not showing sometimes; update: universal padding for inputs, textareas and selects in CF7 forms

--- a/public/scss/views/wpcf7/_rex-wpcf7.scss
+++ b/public/scss/views/wpcf7/_rex-wpcf7.scss
@@ -3,9 +3,14 @@ $input-min-width: 115px;
 .wpcf7 {
 	position: relative;
 
-	input,
+	input[type='text'],
+	input[type='number'],
+	input[type='email'],
 	textarea,
 	select {
+		// Want to override themes' padding
+		padding-left: 18px !important;
+
 		&:focus {
 			outline: none;
 		}
@@ -29,6 +34,7 @@ $input-min-width: 115px;
 
 				.wpcf7-column {
 					display: flex;
+					align-items: center;
 
 					&.column-empty {
 						min-height: 72px;
